--- a/application/admin/view/carousel/index.html
+++ b/application/admin/view/carousel/index.html
@@ -13,75 +13,38 @@
 
 	<body>
 		<div class="wrap-container clearfix">
-				<div class="column-content-detail">
-					<div class="layui-form" id="table-list">
+			<div class="column-content-detail">
+				<button class="layui-btn layui-btn-small layui-btn-normal" onclick="add()"><i class="layui-icon">&#xe654;</i>添加</button>
+				<div class="layui-form" id="table-list">
 						<table class="layui-table" lay-even lay-skin="nob">
-							<colgroup>
-								<col width="50">
-								<col class="hidden-xs" width="50">
-								<col class="hidden-xs" width="100">
-								<col>
-								<col class="hidden-xs" width="150">
-								<col class="hidden-xs" width="150">
-								<col width="80">
-								<col width="150">
-							</colgroup>
 							<thead>
 								<tr>
-									<th><input type="checkbox" name="" lay-skin="primary" lay-filter="allChoose"></th>
-									<th class="hidden-xs">ID</th>
-									<th class="hidden-xs">排序</th>
-									<th>名称</th>
-									<th class="hidden-xs">创建时间</th>
-									<th class="hidden-xs">修改时间</th>
-									<th>状态</th>
+									<th>ID</th>
+									<th>标题</th>
+									<th>图片</th>
+									<th>排序</th>
 									<th>操作</th>
 								</tr>
 							</thead>
 							<tbody>
-								<tr>
-									<td><input type="checkbox" name="" lay-skin="primary" data-id="1"></td>
-									<td class="hidden-xs">1</td>
-									<td class="hidden-xs"><input type="text" name="title" autocomplete="off" class="layui-input" value="0" data-id="1"></td>
-									<td>玩具</td>
-									<td class="hidden-xs">1989-10-14</td>
-									<td class="hidden-xs">1989-10-14</td>
-									<td><button class="layui-btn layui-btn-mini layui-btn-normal">正常</button></td>
-									<td>
-										<div class="layui-inline">
-											<button class="layui-btn layui-btn-small layui-btn-normal go-btn" data-id="1" data-url="article-detail.html"><i class="layui-icon">&#xe642;</i></button>
-											<button class="layui-btn layui-btn-small layui-btn-danger del-btn" data-id="1" data-url="article-detail.html"><i class="layui-icon">&#xe640;</i></button>
-										</div>
-									</td>
-								</tr>
-								<tr>
-									<td><input type="checkbox" name="" lay-skin="primary" data-id="1"></td>
-									<td class="hidden-xs">1</td>
-									<td class="hidden-xs"><input type="text" name="title" autocomplete="off" class="layui-input" value="0" data-id="1"></td>
-									<td>玩具</td>
-									<td class="hidden-xs">1989-10-14</td>
-									<td class="hidden-xs">1989-10-14</td>
-									<td><button class="layui-btn layui-btn-mini layui-btn-normal">正常</button></td>
-									<td>
-										<div class="layui-inline">
-											<button class="layui-btn layui-btn-small layui-btn-normal go-btn" data-id="1" data-url="article-detail.html"><i class="layui-icon">&#xe642;</i></button>
-											<button class="layui-btn layui-btn-small layui-btn-danger del-btn" data-id="1" data-url="article-detail.html"><i class="layui-icon">&#xe640;</i></button>
-										</div>
-									</td>
-								</tr>
+							{volist name='list' id='carousel'}
+							<tr>
+								<td class="hidden-xs">{$carousel.id}</td>
+								<td class="hidden-xs">{$carousel.title}</td>
+								<td class="hidden-xs"><img src="__PUBLIC__\{$carousel.image}" alt="" width="200px"></td>
+								<td class="hidden-xs">{$carousel.sort}</td>
+								<td>
+									<div class="layui-inline">
+										<button class="layui-btn layui-btn-small layui-btn-normal go-btn" data-id="1" onclick="update({$carousel.id})"><i class="layui-icon">&#xe642;</i></button>
+										<button class="layui-btn layui-btn-small layui-btn-danger del-btn" data-id="1"  onclick="is_delete({$carousel.id})"><i class="layui-icon">&#xe640;</i></button>
+									</div>
+								</td>
+							</tr>
+							{/volist}
 							</tbody>
 						</table>
 						<div class="page-wrap">
-							<ul class="pagination">
-								<li class="disabled"><span>«</span></li>
-								<li class="active"><span>1</span></li>
-								<li>
-									<a href="#">2</a>
-								</li>
-								<li>
-									<a href="#">»</a>
-								</li>
-							</ul>
+							{$page}
 						</div>
 					</div>
 				</div>
@@ -91,3 +54,22 @@
 	</body>
 
 </html>
+<script>
+	function add()
+	{
+        window.location.href='/index.php/admin/carousel/add';
+    }
+    function update(id)
+	{
+        window.location.href='/index.php/admin/carousel/update?id='+id;
+    }
+    function is_delete(id){
+        layer.confirm('确定要删除吗？', {
+            btn: ['确定', '取消'] //可以无限个按钮
+        }, function(index, layero){
+            window.location.href='/index.php/admin/carousel/delete?id='+id;
+        }, function(index){
+            //按钮【按钮二】的回调
+        });
+	}
+</script>
