--- a/application/admin/view/category/index.html
+++ b/application/admin/view/category/index.html
@@ -21,7 +21,7 @@
                 <thead>
                 <tr>
                     <th>ID</th>
-                    <th>名称</th>
+                    <th>分类名称</th>
                     <th>操作</th>
                 </tr>
                 </thead>
