--- a/application/admin/view/category/index.html
+++ b/application/admin/view/category/index.html
@@ -14,7 +14,8 @@
 <body>
 <div class="wrap-container clearfix">
     <div class="column-content-detail">
-        <button class="layui-btn layui-btn-small layui-btn-normal addBtn hidden-xs" data-url="/admin/category/add"><i class="layui-icon">&#xe654;</i>添加</button>
+        <!--<button class="layui-btn layui-btn-small layui-btn-normal addBtn hidden-xs" data-url="/admin/category/add"><i class="layui-icon">&#xe654;</i>添加</button>-->
+        <button class="layui-btn layui-btn-small layui-btn-normal " onclick="add()"><i class="layui-icon">&#xe654;</i>添加</button>
 
         <div class="layui-form" id="table-list">
             <table class="layui-table" lay-even lay-skin="nob">
@@ -32,7 +33,7 @@
                     <td class="hidden-xs">{$category.name}</td>
                     <td>
                         <div class="layui-inline">
-                            <button class="layui-btn layui-btn-small layui-btn-normal edit-btn" data-id="1" data-url="/admin/category/update?id={$category.id}"><i class="layui-icon">&#xe642;</i></button>
+                            <button class="layui-btn layui-btn-small layui-btn-normal" data-id="1" onclick="update({$category.id},'{$category.name}')"><i class="layui-icon">&#xe642;</i></button>
                             <button class="layui-btn layui-btn-small layui-btn-danger" data-id="1"  onclick="is_delete({$category.id})"><i class="layui-icon">&#xe640;</i></button>
                         </div>
                     </td>
@@ -46,6 +47,25 @@
         </div>
     </div>
 </div>
+
+<div class="wrap-container" style="display: none">
+    <form class="layui-form" action="/admin/category/add" method="post" style="width: 80%;padding-top: 20px;">
+        <div class="layui-form-item">
+            <label class="layui-form-label">名称：</label>
+            <div class="layui-input-block">
+                <input type="text" name="name" required lay-verify="required" placeholder="请输入名称" autocomplete="off" class="layui-input">
+            </div>
+        </div>
+
+        <div class="layui-form-item">
+            <div class="layui-input-block">
+                <button class="layui-btn layui-btn-normal" onclick="submit" >立即提交</button>
+                <button type="reset" class="layui-btn layui-btn-primary">重置</button>
+            </div>
+        </div>
+    </form>
+</div>
+
 <script src="__PUBLIC__/static/admin/layui/layui.js" type="text/javascript" charset="utf-8"></script>
 <script src="__PUBLIC__/static/admin/js/common.js" type="text/javascript" charset="utf-8"></script>
 </body>
@@ -54,12 +74,64 @@
 <script>
     function add()
     {
-        window.location.href='/index.php/admin/category/add';
+        //页面层
+        layer.open({
+            type: 1,
+            skin: 'layui-layer-rim', //加上边框
+            area: ['420px', '240px'], //宽高
+            content: '<div class="wrap-container" ">\n' +
+            '    <form class="layui-form" action="/admin/category/add" method="post" style="width: 80%;padding-top: 20px;">\n' +
+            '        <div class="layui-form-item">\n' +
+            '            <label class="layui-form-label">名称：</label>\n' +
+            '            <div class="layui-input-block">\n' +
+            '                <input type="text" name="name" required lay-verify="required" placeholder="请输入名称" autocomplete="off" class="layui-input">\n' +
+            '            </div>\n' +
+            '        </div>\n' +
+            '\n' +
+            '        <div class="layui-form-item">\n' +
+            '            <div class="layui-input-block">\n' +
+            '                <button class="layui-btn layui-btn-normal" onclick="submit" >立即提交</button>\n' +
+            '                <button type="reset" class="layui-btn layui-btn-primary">重置</button>\n' +
+            '            </div>\n' +
+            '        </div>\n' +
+            '    </form>\n' +
+            '</div>'
+        });
     }
-    function update(id)
+
+    function update(id,name)
     {
-        window.location.href='/index.php/admin/category/update?id='+id;
+        alert(name)
+        //页面层
+        layer.open({
+            type: 1,
+            skin: 'layui-layer-rim', //加上边框
+            area: ['420px', '240px'], //宽高
+            content: '<div class="wrap-container">\n' +
+            '\t<form class="layui-form" action="/admin/category/update" method="post" style="width: 80%;padding-top: 20px;">\n' +
+            '\t\t<input type="hidden" name="id" value="'+id+'">\n' +
+            '\t\t<div class="layui-form-item">\n' +
+            '\t\t\t<label class="layui-form-label">名称：</label>\n' +
+            '\t\t\t<div class="layui-input-block">\n' +
+            '\t\t\t\t<input type="text" name="name" value="'+name+'" required lay-verify="required" placeholder="请输入名称" autocomplete="off" class="layui-input">\n' +
+            '\t\t\t</div>\n' +
+            '\t\t</div>\n' +
+            '\n' +
+            '\t\t<div class="layui-form-item">\n' +
+            '\t\t\t<div class="layui-input-block">\n' +
+            '\t\t\t\t<button class="layui-btn layui-btn-normal" onclick="submit" >立即提交</button>\n' +
+            '\t\t\t\t<button type="reset" class="layui-btn layui-btn-primary">重置</button>\n' +
+            '\t\t\t</div>\n' +
+            '\t\t</div>\n' +
+            '\t</form>\n' +
+            '</div>'
+        });
     }
+
+    // function update(id)
+    // {
+    //     window.location.href='/index.php/admin/category/update?id='+id;
+    // }
     function is_delete(id){
         layer.confirm('确定要删除吗？', {
             btn: ['确定', '取消'] //可以无限个按钮
