--- a/application/admin/view/category/update.html
+++ b/application/admin/view/category/update.html
@@ -11,7 +11,7 @@
 </head>
 <body>
 <div class="wrap-container">
-	<form class="layui-form" action="/admin/category/update" method="post" style="width: 80%;padding-top: 20px;">
+	<form class="layui-form" action="/admin/category/add" method="post" style="width: 80%;padding-top: 20px;">
 		<input type="hidden" name="id" value="{$data.id}">
 		<div class="layui-form-item">
 			<label class="layui-form-label">名称：</label>
