--- a/application/admin/view/goods/update.html
+++ b/application/admin/view/goods/update.html
@@ -52,9 +52,8 @@
                     </div>
 
                     <div class="layui-form-item layui-form-text">
-                        <label class="layui-form-label">文章内容：</label>
+                        <label class="layui-form-label">商品内容：</label>
                         <div class="layui-input-block">
-                            <!--<textarea class="layui-textarea layui-hide" name="content" lay-verify="content" id="LAY_demo_editor"></textarea>-->
                             <textarea id="LAY_demo_editor" name="content" style="display: none;">{$goods.content}</textarea>
                         </div>
                     </div>
