--- a/application/admin/view/index/index.html
+++ b/application/admin/view/index/index.html
@@ -23,10 +23,10 @@
 				    <a href="/admin/goods/index" target="iframe" data-id='4' data-text="商品管理"><i class="iconfont">&#xe602;</i>商品管理</a>
 				  </li>
 				  <li class="layui-nav-item">
-				    <a href="javascript:;" data-url="email.html" data-id='4' data-text="新闻资讯"><i class="iconfont">&#xe605;</i>新闻资讯</a>
+				    <a href="/admin/news/index" target="iframe" data-id='4' data-text="新闻资讯"><i class="iconfont">&#xe605;</i>新闻资讯</a>
 				  </li>
 				  <li class="layui-nav-item">
-					<a href="javascript:;" data-url="email.html" data-id='4' data-text="工程案例"><i class="iconfont">&#xe639;</i>工程案例</a>
+					<a href="/admin/project_case/index" target="iframe" data-id='4' data-text="工程案例"><i class="iconfont">&#xe639;</i>工程案例</a>
 				  </li>
 				  <li class="layui-nav-item">
      		        <a href="/admin/category/index" target="iframe" data-id='4' data-text="分类管理"><i class="iconfont">&#xe604;</i>分类管理</a>
