--- a/application/admin/view/project_case/add.html
+++ b/application/admin/view/project_case/add.html
@@ -1,4 +1,3 @@
-<?php if (!defined('THINK_PATH')) exit(); /*a:1:{s:68:"D:\work\flowerpot\public/../application/admin\view\carousel\add.html";i:1543593131;}*/ ?>
 <!DOCTYPE html>
 <html>
 	<head>
@@ -7,19 +6,19 @@
   		<meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
 		<meta name="viewport" content="width=device-width,initial-scale=1,minimum-scale=1,maximum-scale=1,user-scalable=no" />
 		<title>花盆网</title>
-		<link rel="stylesheet" type="text/css" href="http://www.flowerpot.com\/static/admin/layui/css/layui.css"/>
-		<link rel="stylesheet" type="text/css" href="http://www.flowerpot.com\/static/admin/css/admin.css"/>
+		<link rel="stylesheet" type="text/css" href="__PUBLIC__/static/admin/layui/css/layui.css"/>
+		<link rel="stylesheet" type="text/css" href="__PUBLIC__/static/admin/css/admin.css"/>
 	</head>
 	<body>
-	<form class="layui-form column-content-detail" action="/index.php/admin/carousel/add" enctype="multipart/form-data" method="post">
+	<form class="layui-form column-content-detail" action="/index.php/admin/project_case/add" enctype="multipart/form-data" method="post">
 	<!--<form class="layui-form column-content-detail" action="/index.php/admin/file/upload" enctype="multipart/form-data" method="post">-->
 					<div class="layui-tab">
 						<div class="layui-tab-content">
 							<div class="layui-tab-item layui-show">
 								<div class="layui-form-item">
-									<label class="layui-form-label">标题：</label>
+									<label class="layui-form-label">工程名称：</label>
 									<div class="layui-input-block">
-										<input type="text" name="title" required lay-verify="required" placeholder="请输入轮播图标题" autocomplete="off" class="layui-input">
+										<input type="text" name="title" required lay-verify="required" placeholder="请输入项目标题" autocomplete="off" class="layui-input">
 									</div>
 								</div>
 
@@ -27,9 +26,6 @@
 									<label class="layui-form-label">图像上传：</label>
 									<div class="layui-upload">
 										<input type="file" name="image" accept="image/*" required lay-verify="require|file" id="">
-									</div>
-									<div class="layui-input-block">
-										<input type="file" name="file（可随便定义）" class="layui-upload-file">
 									</div>
 								</div>
 								<div class="layui-form-item">
@@ -48,8 +44,8 @@
 						</div>
 					</div>
 				</form>
-	<script src="http://www.flowerpot.com\/static/admin/layui/layui.js" type="text/javascript" charset="utf-8"></script>
-	<script src="http://www.flowerpot.com\/static/admin/js/common.js" type="text/javascript" charset="utf-8"></script>
+	<script src="__PUBLIC__/static/admin/layui/layui.js" type="text/javascript" charset="utf-8"></script>
+	<script src="__PUBLIC__/static/admin/js/common.js" type="text/javascript" charset="utf-8"></script>
 	</body>
 </html>
 <script>
